--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <div id="root"></div>
